--- a/menu.css
+++ b/menu.css
@@ -1,6 +1,7 @@
 body {
 	display: flex;
 	justify-content: center;
+	font-family: "Varela Round", sans-serif;
 }
 
 #container {
@@ -9,6 +10,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	background-color: #3d3d3d;
+	color: white;
 }
 
 ol {
@@ -23,7 +27,7 @@ ol {
 li {
 	width: 125px;
 	margin: 10px;
-	border: solid grey 2px;
+	border: solid grey 1px;
 	border-radius: 3px;
 
 	display: flex;
@@ -32,6 +36,10 @@ li {
 
 	user-select: none;
 	cursor: pointer;
+
+	background-color: transparent;
+	color: white;
+	font-family: "Open Sans", sans-serif;
 }
 
 li > img {
@@ -39,5 +47,11 @@ li > img {
 }
 
 li:hover {
-	border-color: cyan;
+	border-color: white;
+	background-color: rgba(0,0,0,0.3);
+}
+
+li.selected {
+	border-color: #37f0f7;
+	color: #37f0f7;
 }
