--- a/menu.css
+++ b/menu.css
@@ -6,13 +6,17 @@ body {
 
 #container {
 	width: 500px;
-	background-color: white;
+	position: relative;
+	top: 220px;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 
 	background-color: #3d3d3d;
 	color: white;
+	border: solid white 3px;
+	border-radius: 15px;
 }
 
 ul {
